# SwitchSNESCon_Pico

./: LICENSE  README.md  SwitchSNESCon_Pico.uf2
SwitchSNESCon_Pico/: CMakeLists.txt  SNESConRead.pio  SwitchSNESCon_Pico.c  SwitchSNESCon_Pico.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
